[tool.poetry]
name = "pararell_processing_tutorial_py"
version = "0.1.0"
description = ""
authors = ["Schumi543 <12729148+Schumi543@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
prompt_toolkit = "^3.0.2"
ipython = "^7.11.0"
googlemaps = "^4.0.0"
aiohttp = "^3.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
